eventcore-macros/tests/ui/wrong_stream_type.stderr
error: EventCore: #[stream] fields must have type StreamId
 --> tests/ui/wrong_stream_type.rs:7:5
  |
7 | /     #[stream]
8 | |     amount: MoneyAmount,
  | |_______________________^
