eventcore-macros/tests/ui/wrong_stream_type.rs
use eventcore_macros::Command;

struct MoneyAmount(u64);

#[derive(Command)]
struct WrongStreamType {
    #[stream]
    amount: MoneyAmount,
}

fn main() {}
